# cpp-db-adapter

./: .appveyor.yml  .codacy.yml  .travis.yml  CMakeLists.txt  README.md  RELEASENOTES.md  build.profile  conanfile.py  conanfile.txt  package.profile
.github/workflows/: archive-docs.yml
DbAdapterInterface/: IBinaryValue.h  IConnection.h  IConnectionConfiguration.h  IDatabase.h  IField.h  IField.inl  IFieldValue.h  IFieldValue.inl  IPrimaryKey.h  IPrimaryKeyValue.h  IRecord.h  IRecordSet.h  ITable.h  ITableRecord.h  ITableRecord.inl  ITableRecordSet.h  ITransaction.h  Types.h  conanfile.py
DbAdapterTestUtilities/: CMakeLists.txt  README.md  conanfile.py  stdafx.h
DbAdapterTestUtilities/Comparators/: EntityComparator.h  EntityComparatorConfiguration.cpp  EntityComparatorConfiguration.h  EntityComparatorMacros.h  EntityMatcher.h  FieldComparator.cpp  FieldComparator.h  FieldValueComparator.cpp  FieldValueComparator.h  TableRecordComparator.cpp  TableRecordComparator.h
DbAdapterTestUtilities/Mocks/: MockBinaryValue.cpp  MockBinaryValue.h  MockConnection.cpp  MockConnection.h  MockConnectionConfiguration.cpp  MockConnectionConfiguration.h  MockDatabase.cpp  MockDatabase.h  MockField.cpp  MockField.h  MockFieldValue.cpp  MockFieldValue.h  MockPrimaryKeyValue.cpp  MockPrimaryKeyValue.h  MockRecord.cpp  MockRecord.h  MockRecordSet.cpp  MockRecordSet.h  MockTable.cpp  MockTable.h  MockTableRecord.cpp  MockTableRecord.h  MockTableRecordSet.cpp  MockTableRecordSet.h  MockTransaction.cpp  MockTransaction.h
DbAdapterTestUtilities/Stubs/: StubField.cpp  StubField.h  StubFieldValue.cpp  StubFieldValue.h  StubPrimaryKey.cpp  StubPrimaryKey.h  StubPrimaryKeyValue.cpp  StubPrimaryKeyValue.h  StubRecord.cpp  StubRecord.h  StubRecordSet.cpp  StubRecordSet.h  StubTable.cpp  StubTable.h  StubTableRecord.cpp  StubTableRecord.h  StubTableRecordSet.cpp  StubTableRecordSet.h
DbAdapterTestUtilities/test_package/: CMakeLists.txt  DbAdapterExample.cpp  conanfile.py
ci/: deploy.sh
ci/pipelines/: Build.jenkinsfile  Release.jenkinsfile  SnowDebug.properties
test_package/: CMakeLists.txt  DbAdapterExample.cpp  conanfile.py
